--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,10 @@ header {
     margin-bottom: 20px;
 }
 
+h1 {
+    font-size: 48px;
+}
+
 .contact-info {
     text-align: center;
 }
@@ -110,7 +114,7 @@ header {
     width: 800px;
 }
 
-.profile-container {
+.profile-container, .work-container {
     display: flex;
     align-items: center;
     background-color: white;
@@ -140,6 +144,7 @@ header {
 
 .profile-text {
     flex: 1; /* Takes up the remaining space */
+    padding-left: 100px;
 }
 
 .profile-text h2 {
@@ -150,4 +155,87 @@ header {
     list-style: disc;
     margin: 0;
     padding-left: 20px;
+}
+
+/* .job-place {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    padding: 10px; 
+    background-color: #f4f4f4; /
+}
+
+.job-place h1 {
+    margin: 0; 
+}
+
+.job-place p {
+    margin: 0; 
+}
+
+.job-position {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #f4f4f4; 
+}
+
+.job-position h1 {
+    margin: 0; 
+}
+
+.job-position p {
+    margin: 0; 
+} */
+
+.jobs {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin-top: 60px;
+}
+
+.job-container {
+    background-color: #fff; /* Background color of the container */
+    border: 1px solid #ddd; /* Border around the container */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    padding: 20px; /* Padding inside the container */
+    max-width: 900px; /* Max width of the container */
+    width: 100%; /* Full width up to max-width */
+    box-sizing: border-box; /* Includes padding and border in element’s total width and height */
+    align-self: center;
+    position: absolute;
+    top: 90px;
+}
+
+.job-container h2 {
+    margin: 0; /* Removes top margin */
+    font-size: 24px; /* Font size of the heading */
+    color: #333; /* Color of the heading */
+}
+
+.job-container h3 {
+    margin: 0; /* Removes top margin */
+    font-size: 24px; /* Font size of the heading */
+    color: #333; /* Color of the heading */
+}
+
+.job-container p {
+    font-size: 16px; /* Font size of the paragraphs */
+    color: #666; /* Color of the text */
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
+
+.job-container p strong {
+    color: #333; /* Color of the bold labels */
+}
+
+.job-container li {
+    margin: 4px 0;
 }
