--- a/styles/style.css
+++ b/styles/style.css
@@ -157,38 +157,6 @@ h1 {
     padding-left: 20px;
 }
 
-/* .job-place {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-    padding: 10px; 
-    background-color: #f4f4f4; /
-}
-
-.job-place h1 {
-    margin: 0; 
-}
-
-.job-place p {
-    margin: 0; 
-}
-
-.job-position {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: #f4f4f4; 
-}
-
-.job-position h1 {
-    margin: 0; 
-}
-
-.job-position p {
-    margin: 0; 
-} */
-
 .jobs {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -238,4 +206,57 @@ h1 {
 
 .job-container li {
     margin: 4px 0;
+}
+
+.assignment-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.assignment-box {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: left;
+    width: 50%;
+    height: 150px;
+}
+
+.assignment-box h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #333;
+}
+
+.assignment-box p {
+    margin: 0 0 10px;
+    font-size: 16px;
+    color: #666;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 15px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #242424;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    margin-top: 30px;
+}
+
+.btn:hover {
+    background-color: #fff;
+    border: 1px solid #242424;
+    color: #242424
+}
+
+.assignment-header {
+    margin-left: 346px;
 }
