--- a/styles/style.css
+++ b/styles/style.css
@@ -226,14 +226,27 @@ h1 {
     height: 150px;
 }
 
-.assignment-box h2 {
+.assignment-box-2 {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: left;
+    width: 50%;
+    height: 330px;
+    display: flex;
+    flex-direction: column;
+}
+
+.assignment-box h2, .assignment-box-2 h2 {
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 20px;
     color: #333;
 }
 
-.assignment-box p {
+.assignment-box p, .assignment-box-2 p {
     margin: 0 0 10px;
     font-size: 16px;
     color: #666;
@@ -249,6 +262,7 @@ h1 {
     border-radius: 4px;
     transition: background-color 0.3s ease;
     margin-top: 30px;
+    width: 80px;
 }
 
 .btn:hover {
